# K-RagRec

./: .gitignore  README.md  pyproject.toml  train_0601.sh
.stfolder/: syncthing-folder-b416c9.txt
docs/: 0pt_generation_pipeline.md  Freebase_Link_Explanation.md  GraphLLM_and_Forward_Explained.md  TASK_SUMMARY_20250604.md
memory/: kg-mid-mapping-investigation.md
methods/: README.md  run_four_experiments.sh  run_more_experiments.sh
methods/baseline/: evaluate.py  retrieve.py  test_no_rag.py  train.py
methods/baseline_llama/: README.md  evaluate.py  run_all.sh  run_qwen_0623.sh  test_no_rag.py  train.py
methods/baseline_qwen/: evaluate.py  run_qwen.sh  run_qwen_0623.sh  test_no_rag.py
methods/h1_qformer/: README.md  evaluate.py  train.py
methods/h2_gate/: README.md  evaluate.py  train.py
methods/h3_pcst/: README.md  evaluate.py  retrieve.py  train.py
methods/h4_temporal/: README.md  evaluate.py  train.py
methods/h5_rel_gnn/: README.md  evaluate.py  retrieve.py  train.py
original_verify/: README.md  evaluate.py  train.py
output_0601/ml1m/: baseline_results.json  baseline_train_summary.json
output_0604/ml1m/: baseline_results.json  baseline_train_summary.json
output_baseline/ml1m/: baseline_results.json  baseline_train_log.json  baseline_train_summary.json
paper/: CODE_ANALYSIS.md  DATA_FORMAT.md  INNOVATIONS.md  K-RagRec.md  K-RagRec.txt  RELATED_WORKS.md
reports/: baseline_h1_comparison.md  diagnosis_constant_c.md  experiment_0604.md
tools/: check_generation.py  debug_h3_pcst.py  debug_h3_pcst2.py  debug_pipeline.py  diagnose_constant_c.py  diff_official.py  fix_baseline_bugs.py  fix_chat_template.py  inspect_data.py  patch_logs.py  regenerate_all_nodes.py  server_checklist.md  smoke_h1_qformer.py  smoke_h2_gate.py  smoke_h3_pcst.py  smoke_h4_temporal.py  smoke_h5_gnn.py  smoke_retrieval.py  test_steiner.py
(+32 files in other folders)
